# CourtScraper

./: .gitignore  .replit  README.md  app.py  pyproject.toml  replit.md
attached_assets/: eCourts_PRD_1760609949648.docx
static/css/: style.css
static/js/: app.js
templates/: index.html
