[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "flask>=3.1.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "selenium>=4.36.0",
    "trafilatura>=2.0.0",
    "webdriver-manager>=4.0.2",
]
